--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,16 +27,16 @@
           <ul class="menu">
             <li class="menu__item">
               <a class="menu__link menu__link--current" href="./index.html"
-                >Студия</a
+                >Студія</a
               >
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link" href="./portfolio.html">
-                Портфолио</a
+                Портфоліо</a
               >
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="">Контакты</a>
+              <a class="menu__link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -73,9 +73,9 @@
 
       <section class="hero">
         <div class="container">
-          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn hero__btn" type="button" data-modal-open>
-            Заказать услугу
+            Замовити послугу
           </button>
         </div>
       </section>
@@ -92,10 +92,10 @@
                   <use href="./images/icons/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Внимание к деталям</h3>
+              <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features__about">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="features__item">
@@ -104,10 +104,10 @@
                   <use href="./images/icons/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Пунктуальность</h3>
+              <h3 class="features__title">Пунктуальність</h3>
               <p class="features__about">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li class="features__item">
@@ -116,10 +116,9 @@
                   <use href="./images/icons/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Планирование</h3>
+              <h3 class="features__title">Планування</h3>
               <p class="features__about">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features__item">
@@ -130,10 +129,10 @@
                   ></use>
                 </svg>
               </div>
-              <h3 class="features__title">Современные технологии</h3>
+              <h3 class="features__title">Сучасні технології</h3>
               <p class="features__about">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
           </ul>
@@ -144,7 +143,7 @@
 
       <section class="what-we-do">
         <div class="container">
-          <h2 class="what-we-do__title">Чем мы занимаемся</h2>
+          <h2 class="what-we-do__title">Чим ми займаємося</h2>
           <ul class="what-we-do__list">
             <li class="what-we-do__item">
               <div class="what-we-do__wrapper">
@@ -159,13 +158,11 @@
 
                   <img
                     src="./images/desk/wwd-1-370.jpg"
-                    alt="Десктопные приложения"
+                    alt="Десктопні додатки"
                   />
                 </picture>
                 <div class="what-we-do__box-title">
-                  <h3 class="what-we-do__nested-title">
-                    Десктопные приложения
-                  </h3>
+                  <h3 class="what-we-do__nested-title">Десктопні додатки</h3>
                 </div>
               </div>
             </li>
@@ -182,11 +179,11 @@
 
                   <img
                     src="./images/desk/wwd-2-370.jpg"
-                    alt="Мобильные приложения"
+                    alt="Мобільні додатки"
                   />
                 </picture>
                 <div class="what-we-do__box-title">
-                  <h3 class="what-we-do__nested-title">Мобильные приложения</h3>
+                  <h3 class="what-we-do__nested-title">Мобільні додатки</h3>
                 </div>
               </div>
             </li>
@@ -203,11 +200,11 @@
 
                   <img
                     src="./images/desk/wwd-3-370.jpg"
-                    alt="Дизайнерские решения"
+                    alt="Дизайнерські рішення"
                   />
                 </picture>
                 <div class="what-we-do__box-title">
-                  <h3 class="what-we-do__nested-title">Дизайнерские решения</h3>
+                  <h3 class="what-we-do__nested-title">Дизайнерські рішення</h3>
                 </div>
               </div>
             </li>
@@ -249,7 +246,7 @@
                 <img src="./images/mobile/team-1-450.jpg " alt="member team" />
               </picture>
               <div class="team-item__card">
-                <h3 class="team-item__unit">Игорь Демьяненко</h3>
+                <h3 class="team-item__unit">Ігор Дем`яненко</h3>
                 <p class="team-item__profession">Product Designer</p>
                 <ul class="social-networks">
                   <li class="social-networks__item">
@@ -319,7 +316,7 @@
                 <img src="./images/mobile/team-2-450.jpg " alt="member team" />
               </picture>
               <div class="team-item__card">
-                <h3 class="team-item__unit">Ольга Репина</h3>
+                <h3 class="team-item__unit">Ольга Рєпіна</h3>
                 <p class="team-item__profession">Frontend Developer</p>
                 <ul class="social-networks">
                   <li class="social-networks__item">
@@ -389,7 +386,7 @@
                 <img src="./images/mobile/team-3-450.jpg " alt="member team" />
               </picture>
               <div class="team-item__card">
-                <h3 class="team-item__unit">Николай Тарасов</h3>
+                <h3 class="team-item__unit">Микола Тарасов</h3>
                 <p class="team-item__profession">Marketing</p>
                 <ul class="social-networks">
                   <li class="social-networks__item">
@@ -459,7 +456,7 @@
                 <img src="./images/mobile/team-4-450.jpg " alt="member team" />
               </picture>
               <div class="team-item__card">
-                <h3 class="team-item__unit">Михаил Ермаков</h3>
+                <h3 class="team-item__unit">Михайло Єрмаков</h3>
                 <p class="team-item__profession">UI Designer</p>
                 <ul class="social-networks">
                   <li class="social-networks__item">
@@ -508,7 +505,7 @@
       <!--Our clients-->
       <section class="clients">
         <div class="container">
-          <h2 class="clients__title">Постоянные клиенты</h2>
+          <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
             <li class="client__item">
               <a href="" class="client__link">
@@ -580,7 +577,7 @@
             <ul class="footer__list">
               <li class="footer__item">
                 <a class="footer__address" href="#">
-                  г. Киев, пр-т Леси Украинки, 26
+                  м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
               <li class="footer__item">
@@ -597,7 +594,7 @@
           </address>
         </div>
         <div class="join-us">
-          <h2 class="join-us__title">присоединяйтесь</h2>
+          <h2 class="join-us__title">приєднуйтесь</h2>
           <ul class="join-us__list">
             <li class="join-us__item">
               <a href="" class="join-us__link">
@@ -638,7 +635,7 @@
           </ul>
         </div>
         <div class="mailling">
-          <h2 class="mailling__title">Подпишитесь на рассылку</h2>
+          <h2 class="mailling__title">Підпишіться на розсилку</h2>
           <form class="mailling__form">
             <label class="mailling__label">
               <input
@@ -649,7 +646,7 @@
               />
             </label>
             <button class="btn mailling__button" type="submit">
-              Подписаться
+              Підписатися
               <svg class="mailling__icon-send" width="24" height="24">
                 <use href="./images/icons/symbol-defs.svg#icon-send"></use>
               </svg>
@@ -668,11 +665,11 @@
           </svg>
         </button>
 
-        <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal__title">Залиштье свої дані, ми вам передзвонимо</p>
 
         <form class="modal__form">
           <div class="modal__wrapper">
-            <label class="modal__label" for="user_name">Имя</label>
+            <label class="modal__label" for="user_name">Ім'я</label>
 
             <input
               class="modal__input"
@@ -695,7 +692,7 @@
           </div>
 
           <div class="modal__wrapper">
-            <label class="modal__label" for="email">Почта</label>
+            <label class="modal__label" for="email">Пошта</label>
 
             <input
               class="modal__input"
@@ -708,11 +705,11 @@
             </svg>
           </div>
           <div class="modal__wrapper txtarea">
-            <label class="modal__label" for="comment">Комментарий</label>
+            <label class="modal__label" for="comment">Коментар</label>
             <textarea
               name="comment"
               rows="5"
-              placeholder="Введите текст"
+              placeholder="Введіть текст"
               id="comment"
             >
             </textarea>
@@ -729,17 +726,17 @@
               <use href="./images/icons/icons.svg#icon-check"></use>
             </svg>
 
-            Соглашаюсь с рассылкой и принимаю &nbsp;
-            <a href="#">Условия договора</a>
+            Погоджуюся з розсилкою та приймаю &nbsp;
+            <a href="#">Умови договору </a>
           </label>
-          <button class="btn modal-button" type="submit">Отправить</button>
+          <button class="btn modal-button" type="submit">Відправити</button>
         </form>
       </div>
     </div>
 
     <!--  Modal mobile contacts -->
 
-    <div class="backdrop_mobile is-hidden" mobile-modal>
+    <div class="backdrop_mobile is-hidden" data-mobile-modal>
       <div class="modal_mobile">
         <button class="modal__close-button--mb" data-close>
           <svg class="modal__close-icon--mb" width="30" height="30">
@@ -750,14 +747,14 @@
         <ul class="modal_menu">
           <li class="modal__item">
             <a href="./index.html" class="modal__link modal__link--current"
-              >Студия
+              >Студія
             </a>
           </li>
           <li class="modal__item">
-            <a href="./portfolio.html" class="modal__link">Портфолио</a>
+            <a href="./portfolio.html" class="modal__link">Портфоліо</a>
           </li>
           <li class="modal__item">
-            <a href="" class="modal__link">Контакты</a>
+            <a href="" class="modal__link">Контакти</a>
           </li>
         </ul>
         <div class="modal--wrap">
@@ -806,7 +803,7 @@
         </div>
       </div>
     </div>
-    <script src="./js/modal _mobile.js"></script>
+    <script src="./js/mobile.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
