--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,15 +27,15 @@
 
           <ul class="menu">
             <li class="menu__item">
-              <a class="menu__link" href="./index.html">Студия</a>
+              <a class="menu__link" href="./index.html">Студія</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--current" href="./portfolio.html"
-                >Портфолио</a
+                >Портфоліо</a
               >
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="">Контакты</a>
+              <a class="menu__link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -75,12 +75,10 @@
               <button class="portfolio__button" type="button">Все</button>
             </li>
             <li class="portfolio__item">
-              <button class="portfolio__button" type="button">Веб-сайты</button>
+              <button class="portfolio__button" type="button">Веб-сайти</button>
             </li>
             <li class="portfolio__item">
-              <button class="portfolio__button" type="button">
-                Приложения
-              </button>
+              <button class="portfolio__button" type="button">Додатки</button>
             </li>
             <li class="portfolio__item">
               <button class="portfolio__button" type="button">Дизайн</button>
@@ -129,10 +127,10 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -176,10 +174,10 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -225,16 +223,16 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="made-projects-list__section">
                   <h2 class="made-projects-list__title">Ресторан Seafood</h2>
-                  <p class="made-projects-list__type-item">Приложение</p>
+                  <p class="made-projects-list__type-item">Додаток</p>
                 </div>
               </a>
             </li>
@@ -272,10 +270,10 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -319,16 +317,16 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="made-projects-list__section">
                   <h2 class="made-projects-list__title">Проект Boxes</h2>
-                  <p class="made-projects-list__type-item">Приложение</p>
+                  <p class="made-projects-list__type-item">Додаток</p>
                 </div>
               </a>
             </li>
@@ -366,10 +364,10 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -415,16 +413,16 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="made-projects-list__section">
                   <h2 class="made-projects-list__title">
-                    Издание Limited Edition
+                    Видання Limited Edition
                   </h2>
                   <p class="made-projects-list__type-item">Дизайн</p>
                 </div>
@@ -464,10 +462,10 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -511,16 +509,16 @@
                   </picture>
                   <div class="made-projects-list__overlay">
                     <p class="made-projects-list__text-about">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="made-projects-list__section">
                   <h2 class="made-projects-list__title">Growing Business</h2>
-                  <p class="made-projects-list__type-item">Приложение</p>
+                  <p class="made-projects-list__type-item">Додаток</p>
                 </div>
               </a>
             </li>
@@ -540,7 +538,7 @@
             <ul class="footer__list">
               <li class="footer__item">
                 <a class="footer__address" href="#">
-                  г. Киев, пр-т Леси Украинки, 26
+                  м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
               <li class="footer__item">
@@ -557,7 +555,7 @@
           </address>
         </div>
         <div class="join-us">
-          <h2 class="join-us__title">присоединяйтесь</h2>
+          <h2 class="join-us__title">приєднуйтесь</h2>
           <ul class="join-us__list">
             <li class="join-us__item">
               <a href="" class="join-us__link">
@@ -598,7 +596,7 @@
           </ul>
         </div>
         <div class="mailling">
-          <h2 class="mailling__title">Подпишитесь на рассылку</h2>
+          <h2 class="mailling__title">Підпишіться на розсилку</h2>
           <form class="mailling__form">
             <label class="mailling__label">
               <input
@@ -609,7 +607,7 @@
               />
             </label>
             <button class="btn mailling__button" type="submit">
-              Подписаться
+              Підписатися
               <svg class="mailling__icon-send" width="24" height="24">
                 <use href="./images/icons/symbol-defs.svg#icon-send"></use>
               </svg>
@@ -619,7 +617,7 @@
       </div>
     </footer>
     <!--  Modal mobile contacts -->
-    <div class="backdrop_mobile is-hidden" mobile-modal>
+    <div class="backdrop_mobile is-hidden" data-mobile-modal>
       <div class="modal_mobile">
         <button class="modal__close-button--mb" data-close>
           <svg class="modal__close-icon--mb" width="30" height="30">
@@ -637,7 +635,7 @@
             >
           </li>
           <li class="modal__item">
-            <a href="" class="modal__link">Контакты</a>
+            <a href="" class="modal__link">Контакти</a>
           </li>
         </ul>
         <div class="modal--wrap">
@@ -659,7 +657,6 @@
               </a>
             </li>
           </ul>
-
           <ul class="modal__soc-list">
             <li class="modal__soc-item">
               <a href=" " class="modal__soc-link"
@@ -686,6 +683,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/modal _mobile.js"></script>
+    <script src="./js/mobile.js"></script>
   </body>
 </html>
